// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders the correct tree when loading 1`] = `
<h1>
  <LoadingIndicator
    global={true}
  >
    Fetching Data...
  </LoadingIndicator>
</h1>
`;

exports[`it renders the correct tree when out of stock 1`] = `
<h1>
  Nice Error Message!
</h1>
`;

exports[`it renders the correct tree when page not found 1`] = `
<h1>
  That page could not be found. Please try again.
</h1>
`;

exports[`it renders the internal error tree otherwise 1`] = `
<h1>
  Something went wrong. Please try again.
</h1>
`;
